--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".OpeningActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,15 +19,18 @@
         </activity>
         <activity
             android:name=".SetupGameActivity"
-            android:label="@string/title_activity_setup_game" >
+            android:label="@string/title_activity_setup_game"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".GamePlayActivity"
-            android:label="@string/title_activity_game_play" >
+            android:label="@string/title_activity_game_play"
+            android:screenOrientation="landscape">
         </activity>
         <activity
             android:name=".EndGameActivity"
-            android:label="@string/title_activity_end_game" >
+            android:label="@string/title_activity_end_game"
+            android:screenOrientation="landscape">
         </activity>
     </application>
 
