--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".OpeningActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +18,7 @@
         </activity>
         <activity
             android:name=".SetupGameActivity"
-            android:label="@string/title_activity_setup_game"
-            android:screenOrientation="landscape">
+            android:label="@string/title_activity_setup_game">
         </activity>
         <activity
             android:name=".GamePlayActivity"
