--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,11 @@
         </activity>
         <activity
             android:name=".GamePlayActivity"
-            android:label="@string/title_activity_game_play"
-            android:screenOrientation="landscape">
+            android:label="@string/title_activity_game_play">
         </activity>
         <activity
             android:name=".EndGameActivity"
-            android:label="@string/title_activity_end_game"
-            android:screenOrientation="landscape">
+            android:label="@string/title_activity_end_game">
         </activity>
     </application>
 
